[tool.poetry]
name = "ns234b"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/ns234b"
homepage = "https://github.com/etijskens/ns234b"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
